# student_distillation_data_selection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: data_format.md  training_and_evaluation.md  verified_teacher_answer_pool.md
examples/: README.md  run_demo.sh
examples/candidates/: teacher_brief_student_train.jsonl  teacher_direct_student_train.jsonl  teacher_verbose_student_train.jsonl
examples/validation/: toy_generations.jsonl
examples/verified_teacher_pool/: README.md  select_with_scas_then_train.sh  train_fixed_teacher.sh
scas/: __init__.py  io.py
scas/evaluation/: __init__.py  evaluate_teacher_outputs.py  filter_correct.py  judge_math.py  prepare_ifeval_responses.py
scas/generation/: __init__.py  generate_responses.py
scas/runtime/: __init__.py  vllm.py
scas/scoring/: __init__.py  metric_utils.py  model_candidates.py  score_demo_candidates.py
scas/selection/: __init__.py  group_by_score.py  select_min_score.py
scas/training/: __init__.py  llamafactory.py
scripts/: evaluate_math.sh  generate_responses.sh  run_train_generate_eval.sh  train_sft.sh
tests/: test_public_pipeline.py
